--- a/open_coesione/static/less/styles.less
+++ b/open_coesione/static/less/styles.less
@@ -891,9 +891,6 @@ hr.big {
   text-transform: none
 }
 
-.navbar .nav {
-  z-index: 20000;
-}
 .dropdown-menu .divider {
   height: 1px;
   margin: 3px 1px;
